k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedding-invite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wedding-invite
  template:
    metadata:
      labels:
        app: wedding-invite
    spec:
      containers:
        - name: wedding-invite
          image: <your-dockerhub-username>/wedding-invite-app:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: db-volume
              mountPath: /app/app/data
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-pvc
