k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-invite-service
spec:
  selector:
    app: wedding-invite
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
